fix button next-step position

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
       </div>
     </aside>
     <main class="container">
-      <section data-step="1" class="personal-info section-step  ">
+      <section data-step="1" class="personal-info section-step hidden ">
         <div class="section-header">
           <h1 class="step-title"> Personal info
           </h1>
@@ -89,12 +89,12 @@
           <button class="next-step section-btn"> Next Step</button>
         </div>
       </section>
-      <section data-step="2" class="select-plan section-step hidden">
+      <section data-step="2" class="select-plan section-step ">
         <div class="section-header">
           <h1 class="step-title">Select your plan</h1>
           <p class="step-info"> You have the option of monthly or yearly billing.</p>
         </div>
-        <div class="plans monthly">
+        <div class="plans monthly hidden">
           <div class="plans-categories">
             <div class="plan-category">
               <div class="arcade">
@@ -125,7 +125,7 @@
             </div>
           </div>
         </div>
-        <div class="plans yearly hidden
+        <div class="plans yearly 
           ">
           <div class="plans-categories">
             <div class="plan-category">
@@ -134,6 +134,7 @@
                 <div class="plan-descrition">
                   <h3>Arcade</h3>
                   <span class="plan-price"> $90/yr</span>
+                  <span class="months-free">2 months free</span>
                 </div>
               </div>
             </div>
@@ -143,6 +144,7 @@
                 <div class="plan-descrition">
                   <h3>Advanced</h3>
                   <span class="plan-category-price">$120/yr</span>
+                  <span class="months-free">2 months free</span>
                 </div>
               </div>
             </div>
@@ -152,6 +154,7 @@
                 <div class="plan-descrition">
                   <h3>Pro</h3>
                   <span class="plan-category-price">$150/yr</span>
+                  <span class="months-free">2 months free</span>
                 </div>
               </div>
             </div>
